@@ -43,6 +43,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicLong;
 
 public class RMContainerAllocator extends AMRMClientImpl
     implements EventHandler<ContainerAllocationEvent> {
@@ -95,7 +96,7 @@ public class RMContainerAllocator extends AMRMClientImpl
 
   protected Thread allocatorThread;
   private final AtomicBoolean stopped = new AtomicBoolean(false);
-  private int rmPollInterval = 1000;//millis
+  private int rmPollInterval = 100;//millis
   protected void startAllocatorThread() {
     allocatorThread = new Thread(new Runnable() {
       @Override
@@ -135,16 +136,23 @@ public class RMContainerAllocator extends AMRMClientImpl
 
   private final Map<Priority, SubQueryId> subQueryMap =
       new HashMap<Priority, SubQueryId>();
+  private AtomicLong prevReportTime = new AtomicLong(0);
+  private int reportInterval = 5 * 1000; // second
 
   public void heartbeat() throws Exception {
     AllocateResponse allocateResponse = allocate(context.getProgress());
     AMResponse response = allocateResponse.getAMResponse();
     List<Container> allocatedContainers = response.getAllocatedContainers();
 
-    LOG.info("Available Cluster Nodes: " + allocateResponse.getNumClusterNodes());
-    LOG.info("Available Resource: " + response.getAvailableResources());
-    LOG.info("Num of Allocated Containers: " + response.getAllocatedContainers().size());
-    if (response.getAllocatedContainers().size() > 0) {
+    long currentTime = System.currentTimeMillis();
+    if((currentTime - prevReportTime.longValue()) >= reportInterval){
+      LOG.debug("Available Cluster Nodes: " + allocateResponse.getNumClusterNodes());
+      LOG.debug("Num of Allocated Containers: " + allocatedContainers.size());
+      LOG.info("Available Resource: " + response.getAvailableResources());
+      prevReportTime.set(currentTime);
+    }
+
+    if (allocatedContainers.size() > 0) {
       LOG.info("================================================================");
       for (Container container : response.getAllocatedContainers()) {
         LOG.info("> Container Id: " + container.getId());
@@ -154,18 +162,14 @@ public class RMContainerAllocator extends AMRMClientImpl
         LOG.info("> Priority: " + container.getPriority());
       }
       LOG.info("================================================================");
-    }
 
-    Map<SubQueryId, List<Container>> allocated = new HashMap<SubQueryId, List<Container>>();
-    if (allocatedContainers.size() > 0) {
+      Map<SubQueryId, List<Container>> allocated = new HashMap<SubQueryId, List<Container>>();
+
       for (Container container : allocatedContainers) {
         SubQueryId subQueryId = subQueryMap.get(container.getPriority());
         SubQueryState state = context.getSubQuery(subQueryId).getState();
-        if (!(isRunningState(state) && subQueryMap.containsKey(container.getPriority()))) {
+        if (!(isRunningState(state))) {
           releaseAssignedContainer(container.getId());
-          synchronized (subQueryMap) {
-            subQueryMap.remove(container.getPriority());
-          }
         } else {
           if (allocated.containsKey(subQueryId)) {
             allocated.get(subQueryId).add(container);
