@@ -104,6 +104,8 @@ Release 0.2.0 - unreleased
 
   BUG FIXES
 
+    TAJO-130: Same queryConf file conflicts. (jinho)
+
     TAJO-82: NullPointerException occurs when Schema is converted as an array 
     of columns. (jihoon)
 
